# lunar-lander

./: .gitignore  CMakeLists.txt  README.md  build_libs.sh  config.txt  create_env.sh  create_video.sh  game_logic.py  main.py  mod_config.py  mod_game_logic.py  mod_lander.py  mod_nn_play.py  mod_nn_train.py  requirements.txt  train_nn.py
libgame_logic/: CMakeLists.txt
libgame_logic/src/: game_logic.cpp  game_logic.h  mod_game_logic_original.py  pybind_game_logic.cpp
sample_runs/: config_16_32_sample_2.txt  lunar_lander_5_16_32_4_s_1000.txt  lunar_lander_5_16_32_4_s_3000.txt  lunar_lander_5_16_32_4_s_4000.txt  lunar_lander_5_16_32_4_s_5000.txt  lunar_lander_5_16_32_4_s_6000.txt
sample_runs/16_16/: config_16_16_sample_1.txt  lunar_lander_5_16_16_4_s_0100.txt  lunar_lander_5_16_16_4_s_0300.txt  lunar_lander_5_16_16_4_s_0500.txt  lunar_lander_5_16_16_4_s_0750.txt  lunar_lander_5_16_16_4_s_1000.txt  lunar_lander_5_16_16_4_s_1250.txt  lunar_lander_5_16_16_4_s_1500.txt  lunar_lander_5_16_16_4_s_2000.txt  lunar_lander_5_16_16_4_s_2500.txt  lunar_lander_5_16_16_4_s_3000.txt  lunar_lander_5_16_16_4_s_3500.txt  lunar_lander_5_16_16_4_s_4000.txt  lunar_lander_5_16_16_4_s_4500.txt  lunar_lander_5_16_16_4_s_5000.txt  lunar_lander_5_16_16_4_s_5500.txt  lunar_lander_5_16_16_4_s_6000.txt  lunar_lander_5_16_16_4_s_6500.txt
sample_runs/16_32/: config_16_32_sample_1.txt
sample_runs/16_64_32/: config_16_64_32_sample_1.txt  lunar_lander_5_16_64_32_4_s_0400.txt  lunar_lander_5_16_64_32_4_s_0600.txt  lunar_lander_5_16_64_32_4_s_0900.txt  lunar_lander_5_16_64_32_4_s_1100.txt
sample_runs/32_128_32/: config_32_128_32_sample_1.txt  lunar_lander_5_32_128_32_4_s_0100.txt  lunar_lander_5_32_128_32_4_s_0200.txt  lunar_lander_5_32_128_32_4_s_0300.txt  lunar_lander_5_32_128_32_4_s_0400.txt  lunar_lander_5_32_128_32_4_s_0500.txt  lunar_lander_5_32_128_32_4_s_0600.txt  lunar_lander_5_32_128_32_4_s_0700.txt  lunar_lander_5_32_128_32_4_s_0800.txt
sample_runs/8_16_32_16_8/: config_8_16_32_16_8_sample_1.txt  lunar_lander_5_8_16_32_16_8_4_s_0250.txt  lunar_lander_5_8_16_32_16_8_4_s_0500.txt  lunar_lander_5_8_16_32_16_8_4_s_0750.txt  lunar_lander_5_8_16_32_16_8_4_s_1000.txt  lunar_lander_5_8_16_32_16_8_4_s_1250.txt  lunar_lander_5_8_16_32_16_8_4_s_1500.txt  lunar_lander_5_8_16_32_16_8_4_s_1750.txt  lunar_lander_5_8_16_32_16_8_4_s_2000.txt  lunar_lander_5_8_16_32_16_8_4_s_2250.txt  lunar_lander_5_8_16_32_16_8_4_s_2500.txt
sample_runs/8_16_8/: config_8_16_8_same_1.txt  config_8_16_8_sample_2.txt  lunar_lander_5_8_16_8_4_s_0200_sample_2.txt  lunar_lander_5_8_16_8_4_s_0300_sample_2.txt  lunar_lander_5_8_16_8_4_s_0400_sample_1.txt  lunar_lander_5_8_16_8_4_s_0400_sample_2.txt  lunar_lander_5_8_16_8_4_s_0500_sample_2.txt
src/: config_cpp.h  config_loader.cpp  config_loader.h  game_logic.cpp  game_logic.h  game_utils.cpp  game_utils.h  lunar_lander_cpp.cpp  main_train.cpp  nn_engine_trainer.cpp  nn_engine_trainer.h
utils/: create_rocket_sound.py
